# sekigae

./: .gitignore  README.md  docker-compose.yml  env.sh  package-lock.json  package.json  requirements.txt  setup.cfg
fastapi/: Dockerfile  alembic.ini  entrypoint.sh  env.sh  fastapi.env.tmpl  pyproject.toml
fastapi/app/: main.py
fastapi/app/api/v1/: __init__.py  auth.py  student_sheet.py  user.py
fastapi/app/core/: auth.py  exceptions.py  handlers.py  jwt_handler.py  log.py  settings.py
fastapi/app/crud/: __init__.py  base.py  student.py  student_sheet.py  user.py
fastapi/app/db/: data.py  database.py  seed.py
fastapi/app/db/migrations/: env.py
fastapi/app/db/migrations/versions/: 20211230_134529_init_user.py  20220101_132011_add_firebase_uid_to_user.py  20220103_175531_student_sheet.py  20220104_110934_student.py
fastapi/app/dependencies/: auth.py
fastapi/app/middlwares/: __init__.py  auth.py  cors.py
fastapi/app/models/: __init__.py  base.py  student.py  student_sheet.py  user.py
fastapi/app/routers/: __init__.py
fastapi/app/routers/monitoring/: __init__.py  health.py
fastapi/app/routers/v1/: __init__.py  auth.py  studnet_sheet.py  user.py
fastapi/app/schemas/: __init__.py  auth.py  student.py  student_sheet.py  user.py
fastapi/scripts/: server
postgres/: postgres.env.tmpl
references/: er.drawio
